# airspace-viewer

./: .ebignore  .gitignore  .isort.cfg  AWS-SETUP.md  Dockerfile  Procfile  README.md  application.py  aws-setup.sh  check-aws-resources.sh  cspell-dictionary.txt  cspell.json  fly.toml  mypy.ini  pyproject.toml  requirements.txt  setup-aws-user.sh  test_app.py  test_kml_converter.py
.ebextensions/: 01_python.config  02_static_files.config  03_logging.config  04_wsgi_config.config  05_gunicorn.config  environment.config  python.config
.github/workflows/: deploy.yml
app/: __init__.py  airspace_colors.py  app.py  config.py  openair_types.py
app/examples/: Airspace-Disentis-2025-MIL-OFF-min-2.txt  Airspace-Disentis-2025-MIL-ON-min-2.txt  bst2025.txt  bwo25.txt  copalasamericas25.txt  fo2025.txt  mosel25.txt  nrwcup25.txt  srs-poggio25.txt  switzerland-airspace-feet.txt  switzerland-airspace-metric.txt  switzerland-wildlife-feet.txt  switzerland-wildlife-meters.txt
app/model/: openair_types.py
app/routes/: __init__.py  api_routes.py  main_routes.py
app/services/: __init__.py  airspace_service.py
app/static/: style.css
app/static/js/: airspace.js  drag_and_drop.js  example_file_loader.js  example_menu.js  main.js  map.js  side_view.js
app/templates/: _control_panel.html  _file_info_display.html  _flash_messages.html  _footer.html  _header.html  _html_head.html  _legend.html  index.html
app/templates/js/: config.js
app/utils/: __init__.py  airspace_colors.py  arc_utils.py  file_utils.py  geojson_converter.py  kml_converter.py  logging_utils.py  units.py
(+1 files in other folders)
